2014-08-06  Holger Seelig  <holger.seelig@yahoo.de>

	* Browser.h:
	* Browser.cpp:
	* TransformTool.x3dv:
	* X3DFlyViewer.h:
	* KeyDevice.h:
	* X3DFlyViewer.cpp:
	* KeyDevice.cpp:
	* KeySensor.h:
	* KeySensor.cpp:
	* StringSensor.h:
	* StringSensor.cpp:
	* X3DKeyDeviceSensorNode.h:
	* X3DKeyDeviceSensorNode.cpp: 

2014-08-05  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* LOD.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* LightTool.x3dv: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* LOD.h:
	* LOD.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* LookAtViewer.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Console.h:
	* Console.cpp: 

2014-08-04  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* ViewpointTool.x3dv:
	* OrthoViewpointTool.h:
	* OrthoViewpoint.h:
	* OrthoViewpoint.cpp: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* BindableNodeList.h:
	* BindableNodeStack.h:
	* BindableNodeList.cpp:
	* X3DNavigationContext.cpp: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* LightTool.x3dv:
	* BoundingBox.x3dv:
	* ViewpointTool.x3dv:
	* TransformTool.x3dv:
	* Vector.x3dv:
	* ToolShader.x3dv:
	* HandleShader.x3dv: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* World.h:
	* X3DConstants.h:
	* LightTool.x3dv:
	* ViewpointTool.x3dv:
	* X3DBindableNodeTool.h:
	* ViewpointTool.h:
	* Viewpoint.h:
	* X3DBindableNode.h:
	* Viewpoint.cpp:
	* X3DViewpointNodeTool.h:
	* X3DViewpointNode.h: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* ViewpointTool.x3dv:
	* ProtoDeclaration.cpp:
	* ExternProtoDeclaration.cpp:
	* X3DPrototypeInstance.cpp: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* ViewpointTool.x3dv: 

2014-08-03  Holger Seelig  <holger.seelig@yahoo.de>
